Closed Bug 1639384 Opened 5 years ago Closed 5 years ago

Bit usage comment in StringType.h refers to wrong bits

Categories

(Core :: JavaScript Engine, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox78 --- fixed

People

(Reporter: sfink, Assigned: sfink)

Details

Attachments

(1 file)

It describes bits 0..3 when it should be talking about bits 3..6.

Pushed by sfink@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/fcd4ed4c53df Update bit usage comment in StringType.h r=jonco
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: