Bug 1639384 - Update bit usage comment in StringType.h r=jonco

Differential Revision: https://phabricator.services.mozilla.com/D76063